--- a/views/admin/adminSales.ejs
+++ b/views/admin/adminSales.ejs
@@ -6,7 +6,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>ChronoChic Dashboard</title>
+    <title>BOOKCAFE</title>
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -21,6 +21,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+       <style>
+        #pdfTable {
+    width: 120%; /* Adjust the width as needed */
+    border-collapse: collapse;
+}
+       </style> 
 </head>
 
 <body>
