some bugs changed

--- a/views/admin/adminhome.ejs
+++ b/views/admin/adminhome.ejs
@@ -5,7 +5,7 @@
 <!-- Mirrored from wp.alithemes.com/html/evara/evara-backend/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 01 Aug 2021 15:32:35 GMT -->
 <head>
     <meta charset="utf-8">
-    <title>ChronoChic Dashboard</title>
+    <title>BookCafe Dasboard</title>
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -52,11 +52,11 @@
                         <span class="text">Category</span>
                     </a>                   
                 </li>
-                <li class="menu-item ">
+                <!-- <li class="menu-item ">
                     <a class="menu-link" href="/admin/catagoryOffer"> <i class="icon material-icons md-shopping_bag"></i>
                         <span class="text">Category Offer</span>
                     </a>                   
-                </li>
+                </li> -->
                 <li class="menu-item ">
                     <a class="menu-link" href="/admin/coupon"> <i class="icon material-icons md-shopping_bag"></i>
                         <span class="text">Coupons</span>
