--- a/views/users/landingpage.ejs
+++ b/views/users/landingpage.ejs
@@ -149,16 +149,16 @@
                                             </ul> -->
                                         </li>
 
-                                        <li><a href="#">Shop <i class="fa fa-angle-down"></i></a>
-                                            <ul class="mega-menu">
+                                        <li><a href="#">Shop <i class="active"></i></a>
+                                            <!-- <ul class="mega-menu">
                                                 <li><a href="#">Shop Layouts</a>
                                                     <ul>
                                                         <li><a href="shop.html">Shop Left Sidebar</a></li>
-                                                        <!-- <li><a href="shop-right-sidebar.html">Shop Right Sidebar</a></li>
+                                                        <li><a href="shop-right-sidebar.html">Shop Right Sidebar</a></li>
                                                         <li><a href="shop-list-left.html">Shop List Left Sidebar</a></li>
                                                         <li><a href="shop-list-right.html">Shop List Right Sidebar</a></li>
                                                         <li><a href="shop-fullwidth.html">Shop Full Width</a></li> -->
-                                                    </ul>
+                                                    <!-- </ul> -->
                                                 </li>
                                                 <!-- <li><a href="blog.html">Product Details</a>
                                                     <ul>
@@ -191,13 +191,13 @@
                                             </ul>
                                         </li> -->
 
-                                        <li><a href="#">Pages <i class="fa fa-angle-down"></i></a>
-                                            <ul class="sub-menu">
+                                        <li><a href="#">Pages <i class="active"></i></a>
+                                            <!-- <ul class="sub-menu">
                                                 <li><a href="frequently-questions.html">FAQ</a></li>
                                                 <li><a href="my-account.html">My Account</a></li>
                                                 <li><a href="login">login </a></li>
                                                 <li><a href="register">register</a></li>
-                                            </ul>
+                                            </ul> -->
                                         </li>
                                         <li><a href="about-us.html">About Us</a></li>
                                         <li><a href="contact-us.html">Contact</a></li>
