--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -260,16 +260,16 @@
                                 <!--  Start Mainmenu Nav-->
                                 <nav class="main-navigation text-center">
                                     <ul>
-                                        <li class="active"><a href="index.html">Home <i
-                                                    class="fa fa-angle-down"></i></a>
-                                            <ul class="sub-menu">
+                                        <li class="active"><a href="index.html">Home <i></i>
+                                                  </a>
+                                            <!-- <ul class="sub-menu">
                                                 <li><a href="index.html">Home Page 1</a></li>
                                                 <li><a href="index-2.html">Home Page 2</a></li>
-                                            </ul>
+                                            </ul> -->
                                         </li>
 
-                                        <li><a href="#">Shop <i class="fa fa-angle-down"></i></a>
-                                            <ul class="mega-menu">
+                                        <li><a href="#">Shop <i class="active"></i></a>
+                                            <!-- <ul class="mega-menu">
                                                 <li><a href="#">Shop Layouts</a>
                                                     <ul>
                                                         <li><a href="shop.html">Shop Left Sidebar</a></li>
@@ -280,9 +280,9 @@
                                                         <li><a href="shop-list-right.html">Shop List Right Sidebar</a>
                                                         </li>
                                                         <li><a href="shop-fullwidth.html">Shop Full Width</a></li>
-                                                    </ul>
+                                                    </ul> -->
                                                 </li>
-                                                <li><a href="blog.html">Product Details</a>
+                                                <!-- <li><a href="blog.html">Product Details</a>
                                                     <ul>
                                                         <li><a href="product-details.html">Single Product Details</a>
                                                         </li>
@@ -303,26 +303,26 @@
                                                         <li><a href="wishlist.html">Wish List Page</a></li>
                                                     </ul>
                                                 </li>
-                                            </ul>
+                                            </ul> -->
 
                                         </li>
-                                        <li><a href="blog.html">Blog <i class="fa fa-angle-down"></i></a>
+                                        <li><a href="blog.html">Blog <i class="active"></i></a>
 
-                                            <ul class="sub-menu">
+                                            <!-- <ul class="sub-menu">
                                                 <li><a href="blog.html">Blog Left Sidebar</a></li>
                                                 <li><a href="blog-right-sidebar.html">Blog Right Sidebar</a></li>
                                                 <li><a href="blog-grid.html">Blog Grid Page</a></li>
                                                 <li><a href="blog-largeimage.html">Blog Large Image</a></li>
                                                 <li><a href="blog-details.html">Blog Details Page</a></li>
-                                            </ul>
+                                            </ul> -->
                                         </li>
 
-                                        <li><a href="#">Pages <i class="fa fa-angle-down"></i></a>
-                                            <ul class="sub-menu">
+                                        <li><a href="#">Pages <i class="active"></i></a>
+                                            <!-- <ul class="sub-menu">
                                                 <li><a href="frequently-questions.html">FAQ</a></li>
                                                 <li><a href="my-account.html">My Account</a></li>
                                                 <li><a href="login-register.html">login &amp; register</a></li>
-                                            </ul>
+                                            </ul> -->
                                         </li>
                                         <li><a href="about-us.html">About Us</a></li>
                                         <li><a href="contact-us.html">Contact</a></li>
