--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -116,15 +116,15 @@
                                 <!--  Start Mainmenu Nav-->
                                 <nav class="main-navigation text-center">
                                     <ul>
-                                        <li class="active"><a href="index.html">Home <i class="fa fa-angle-down"></i></a>
-                                            <ul class="sub-menu">
+                                        <li class="active"><a href="index.html">Home </a>
+                                            <!-- <ul class="sub-menu">
                                                 <li><a href="index.html">Home Page 1</a></li>
                                                 <li><a href="index-2.html">Home Page 2</a></li>
-                                            </ul>
+                                            </ul> -->
                                         </li>
 
-                                        <li><a href="#">Shop <i class="fa fa-angle-down"></i></a>
-                                            <ul class="mega-menu">
+                                        <li><a href="#">Shop </a>
+                                            <!-- <ul class="mega-menu">
                                                 <li><a href="#">Shop Layouts</a>
                                                     <ul>
                                                         <li><a href="shop.html">Shop Left Sidebar</a></li>
@@ -154,23 +154,23 @@
                                             </ul>
 
                                         </li>
-                                        <li><a href="blog.html">Blog <i class="fa fa-angle-down"></i></a>
+                                         <li><a href="blog.html">Blog <i class="fa fa-angle-down"></i></a>
 
-                                            <ul class="sub-menu">
+                                             <ul class="sub-menu">
                                                 <li><a href="blog.html">Blog Left Sidebar</a></li>
                                                 <li><a href="blog-right-sidebar.html">Blog Right Sidebar</a></li>
                                                 <li><a href="blog-grid.html">Blog Grid Page</a></li>
                                                 <li><a href="blog-largeimage.html">Blog Large Image</a></li>
                                                 <li><a href="blog-details.html">Blog Details Page</a></li>
-                                            </ul>
+                                            </ul> --> 
                                         </li>
 
-                                        <li><a href="#">Pages <i class="fa fa-angle-down"></i></a>
-                                            <ul class="sub-menu">
+                                        <li><a href="#">Pages </i></a>
+                                            <!-- <ul class="sub-menu">
                                                 <li><a href="frequently-questions.html">FAQ</a></li>
                                                 <li><a href="my-account.html">My Account</a></li>
                                                 <li><a href="login-register.html">login &amp; register</a></li>
-                                            </ul>
+                                            </ul> -->
                                         </li>
                                         <li><a href="about-us.html">About Us</a></li>
                                         <li><a href="contact-us.html">Contact</a></li>
